--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -1,12 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "69eb3977-f345-49f9-98dc-29c3e58c3b68",
+   "cell_type": "markdown",
+   "id": "38cf2cc1-87a6-4445-a21b-3a49db656aad",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Predicting heart disease using machine learning\n",
+    "\n",
+    "This notebook looks into using various Python based machine learning and data science libraries in an an attempt to build a machine learning model capable of predicitng whether someone has heart disease or not based on their medical attributes."
+   ]
   }
  ],
  "metadata": {
