--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -7,7 +7,34 @@
    "source": [
     "# Predicting heart disease using machine learning\n",
     "\n",
-    "This notebook looks into using various Python based machine learning and data science libraries in an an attempt to build a machine learning model capable of predicitng whether someone has heart disease or not based on their medical attributes."
+    "This notebook looks into using various Python based machine learning and data science libraries in an an attempt to build a machine learning model capable of predicitng whether someone has heart disease or not based on their medical attributes.\n",
+    "\n",
+    "We're going to take the following approach:\n",
+    "1. Problem definition\n",
+    "2. Data\n",
+    "3. Evaluate\n",
+    "4. Features\n",
+    "5. Modelling\n",
+    "6. Experimentation\n",
+    "\n",
+    "## 1. Problem Definition\n",
+    "In a statement, \n",
+    "> Given clinical parameters about a patient, can we predict whether or not they have heart disease?\n",
+    "\n",
+    "## 2. Data\n",
+    "\n",
+    "The original data came from the Cleveland data from UCI Machine Learning Repository. \n",
+    "\n",
+    "There is also a version of it available on Kaggle.\n",
+    "\n",
+    "## 3. Evaluation \n",
+    "> If we can reach 95% accuracy at prediciting whether or not a patient has heart disease during the proof of concept, we'll purse the project.\n",
+    "\n",
+    "## 4. Features\n",
+    "\n",
+    "This is where you get information about each of the features in your data.\n",
+    "\n",
+    "**create data dictionary**\n"
    ]
   }
  ],
