import major EDA and plotting libraries

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -36,6 +36,45 @@
     "\n",
     "**create data dictionary**\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ffee8b3-5663-4ff1-83d7-a514d2da1618",
+   "metadata": {},
+   "source": [
+    "## Preparing the tools\n",
+    "\n",
+    "We're going to use, pandas, matplotlib and NumPy for data analysis and manipulation."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "da6c8fb7-1de8-467c-abe4-c875de4e8344",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import all the tools we need\n",
+    "\n",
+    "# Regular EDA(exploratory data analysis) and plotting libraries\n",
+    "\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sos\n",
+    "\n",
+    "%matplotlib inline # we want plots to appear inside the notebook\n",
+    "\n",
+    "# Models from sklearn\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Model evaluations\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
+    "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
+    "from sklearn.metrics import confusion_matrix, classification_report\n"
+   ]
   }
  ],
  "metadata": {
