load data and data eploration intro

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "da6c8fb7-1de8-467c-abe4-c875de4e8344",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,8 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sos\n",
     "\n",
-    "%matplotlib inline # we want plots to appear inside the notebook\n",
+    "# we want plots to appear inside the notebook\n",
+    "%matplotlib inline\n",
     "\n",
     "# Models from sklearn\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -73,7 +74,55 @@
     "# Model evaluations\n",
     "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.model_selection import RandomizedSearchCV, GridSearchCV\n",
-    "from sklearn.metrics import confusion_matrix, classification_report\n"
+    "from sklearn.metrics import confusion_matrix, classification_report\n",
+    "from sklearn.metrics import precision_score, recall_score, f1_score\n",
+    "# from sklearn.metrics import plot_roc_curve"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5356cd4c-a51d-4602-92f0-74305a827fbe",
+   "metadata": {},
+   "source": [
+    "# Load data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e847b7d1-2b9e-4350-b99b-ab6cc7a37381",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(303, 14)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"heart-disease.csv\")\n",
+    "df.shape # rows and cols"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2e73a5b1-42f8-4f71-94d2-ae89ee4ff67d",
+   "metadata": {},
+   "source": [
+    "## Data Exploration (exploratory data analysis or EDA)\n",
+    "\n",
+    "The goal here is to find out more about the data and become a subject matter export on the dataset you're working with.\n",
+    "\n",
+    "1. What question(s) are you trying to solve?\n",
+    "2. What kind of data do we have and how do we treat different types?\n",
+    "3. What's missing from the data and how do you deal with it?\n",
+    "4. Where are the outliers and why do you care about them?\n",
+    "5. How can you"
    ]
   }
  ],
