finding patterns: comparing target col with sex col

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "eaf19a6b-fe9f-4903-87b4-7bdbc49b55f0",
    "metadata": {},
    "outputs": [
@@ -779,20 +779,163 @@
        "max      3.000000    1.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# info\n",
+    "# information about our data\n",
     "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab0d21c0-8199-4352-9c93-7ed6758a647b",
+   "metadata": {},
+   "source": [
+    "comparing columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bfd1476-237b-4972-b70c-964b36dbcdea",
+   "metadata": {},
+   "source": [
+    "### Heart Disease Frequency according to Sex"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "92c06b69-9520-4fde-bca6-54eeaf26b5b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sex\n",
+       "1    207\n",
+       "0     96\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.sex.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "51702689-8f3b-4843-a142-ea04168cc6f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>sex</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>target</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>24</td>\n",
+       "      <td>114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>72</td>\n",
+       "      <td>93</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "sex      0    1\n",
+       "target         \n",
+       "0       24  114\n",
+       "1       72   93"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Compare target column with sex column\n",
+    "pd.crosstab(df.target, df.sex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f293dfba-ba80-4b30-878e-c751d555150b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax. Perhaps you forgot a comma? (3938219844.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[18], line 3\u001b[1;36m\u001b[0m\n\u001b[1;33m    figsize=(10, 6)\u001b[0m\n\u001b[1;37m            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax. Perhaps you forgot a comma?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create a plot of crosstab\n",
+    "pd.crosstab(df.target, df.sex).plot(kind=\"bar\",\n",
+    "                   figsize=(10, 6)\n",
+    "                   color=[\"salmon\", \"lightblue\"])\n",
+    "\n",
+    "plt.title(\"Heart Disease Frequency for Sex\")\n",
+    "plt.xlabel(\"0 = No Disease, 1 = Disease\")\n",
+    "plt.ylabel(\"Amount\")\n",
+    "plt.legend([\"Female\", \"Male\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "08e1fcfd-2561-45a6-ae73-4dcc6b50a83a",
+   "id": "2cf2a5a7-3df6-4f93-8340-30fd5f0e687b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e553ac32-3c9f-4962-a85c-bd2c87702f72",
    "metadata": {},
    "outputs": [],
    "source": []
