train and test sets

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2122,11 +2122,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "8fb9aa7c-5fa9-448b-ae9f-83e67a985752",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Split data into train and test sets\n",
+    "np.random.seed(42)\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7d9aeed-1ac0-4189-af49-ff52b70a44e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train"
+   ]
   }
  ],
  "metadata": {
