--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2135,12 +2135,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "f7d9aeed-1ac0-4189-af49-ff52b70a44e5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>cp</th>\n",
+       "      <th>trestbps</th>\n",
+       "      <th>chol</th>\n",
+       "      <th>fbs</th>\n",
+       "      <th>restecg</th>\n",
+       "      <th>thalach</th>\n",
+       "      <th>exang</th>\n",
+       "      <th>oldpeak</th>\n",
+       "      <th>slope</th>\n",
+       "      <th>ca</th>\n",
+       "      <th>thal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>132</th>\n",
+       "      <td>42</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>120</td>\n",
+       "      <td>295</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>202</th>\n",
+       "      <td>58</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>150</td>\n",
+       "      <td>270</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>111</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>196</th>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>150</td>\n",
+       "      <td>231</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>147</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75</th>\n",
+       "      <td>55</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>135</td>\n",
+       "      <td>250</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>161</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>176</th>\n",
+       "      <td>60</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>117</td>\n",
+       "      <td>230</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>160</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>188</th>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>140</td>\n",
+       "      <td>233</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>163</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71</th>\n",
+       "      <td>51</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>94</td>\n",
+       "      <td>227</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>154</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>106</th>\n",
+       "      <td>69</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>160</td>\n",
+       "      <td>234</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>131</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>270</th>\n",
+       "      <td>46</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>120</td>\n",
+       "      <td>249</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>102</th>\n",
+       "      <td>63</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>140</td>\n",
+       "      <td>195</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>179</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>242 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     age  sex  cp  trestbps  chol  fbs  restecg  thalach  exang  oldpeak  \\\n",
+       "132   42    1   1       120   295    0        1      162      0      0.0   \n",
+       "202   58    1   0       150   270    0        0      111      1      0.8   \n",
+       "196   46    1   2       150   231    0        1      147      0      3.6   \n",
+       "75    55    0   1       135   250    0        0      161      0      1.4   \n",
+       "176   60    1   0       117   230    1        1      160      1      1.4   \n",
+       "..   ...  ...  ..       ...   ...  ...      ...      ...    ...      ...   \n",
+       "188   50    1   2       140   233    0        1      163      0      0.6   \n",
+       "71    51    1   2        94   227    0        1      154      1      0.0   \n",
+       "106   69    1   3       160   234    1        0      131      0      0.1   \n",
+       "270   46    1   0       120   249    0        0      144      0      0.8   \n",
+       "102   63    0   1       140   195    0        1      179      0      0.0   \n",
+       "\n",
+       "     slope  ca  thal  \n",
+       "132      2   0     2  \n",
+       "202      2   0     3  \n",
+       "196      1   0     2  \n",
+       "75       1   0     2  \n",
+       "176      2   2     3  \n",
+       "..     ...  ..   ...  \n",
+       "188      1   1     3  \n",
+       "71       2   1     3  \n",
+       "106      1   1     2  \n",
+       "270      2   0     3  \n",
+       "102      2   2     2  \n",
+       "\n",
+       "[242 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X_train"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "31bbd2ba-0807-45df-8e83-b77af9eee0f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(132    1\n",
+       " 202    0\n",
+       " 196    0\n",
+       " 75     1\n",
+       " 176    0\n",
+       "       ..\n",
+       " 188    0\n",
+       " 71     1\n",
+       " 106    1\n",
+       " 270    0\n",
+       " 102    1\n",
+       " Name: target, Length: 242, dtype: int64,\n",
+       " 242)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_train, len(y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c355ed4e-17b0-4487-a41f-53b41d88da8d",
+   "metadata": {},
+   "source": [
+    "Its time to build a machine learning model.\n",
+    "\n",
+    "We'll train it(find patterns) on the training set.\n",
+    "\n",
+    "& will test it(using the patterns) on the test set.\n",
+    "\n",
+    "We're going to try 3 different ml models:\n",
+    "1. Logistic Regression\n",
+    "2. K-Nearest Neighbor Classifier\n",
+    "3. Random Forest Classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18b1feaf-b913-4c34-aab1-12ce2e266746",
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train"
+    "# "
    ]
   }
  ],
