fit_and_score func to fit and score our models

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2453,7 +2453,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "# Put models in a dictionary\n",
+    "models = {\n",
+    "    \"Logistic Regression\": LogisticRegression(),\n",
+    "    \"KNN\": KNeighborsClassifier(),\n",
+    "    \"Random Forest\": RandomForestClassifier()\n",
+    "}\n",
+    "\n",
+    "# Create a function to fit and score models\n",
+    "def fit_and_score(models, X_train, X_test, y_train, y_test):\n",
+    "    \"\"\"\n",
+    "    Function Fits and evaluates given ml models.\n",
+    "    models: a dict of different Sklearn ml models\n",
+    "    X_train: training data (no labels)\n",
+    "    X_test: testing data(no labels)\n",
+    "    y_train: training labels\n",
+    "    y_test: test labels\n",
+    "    \"\"\"\n",
+    "    # Set random seed\n",
+    "    np.random.seed(42)\n",
+    "    \n",
+    "    # Make a dictionary to keep model scores\n",
+    "    model_scores = {}\n",
+    "    \n",
+    "    # Loop through models\n",
+    "    for name, model in model.items():\n",
+    "        # Fit the model to the data\n",
+    "        model.fit(X_train, y_train)\n",
+    "        \n",
+    "        # Evaluate the model and append its score to model_scores\n",
+    "        model_scores[name] = model.score()"
    ]
   }
  ],
