fit and score our models

--- a/end-to-end-heart-disease-classification.ipynb
+++ b/end-to-end-heart-disease-classification.ipynb
@@ -2448,7 +2448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "18b1feaf-b913-4c34-aab1-12ce2e266746",
    "metadata": {},
    "outputs": [],
@@ -2482,8 +2482,47 @@
     "        model.fit(X_train, y_train)\n",
     "        \n",
     "        # Evaluate the model and append its score to model_scores\n",
-    "        model_scores[name] = model.score()"
+    "        model_scores[name] = model.score(X_test, y_test)\n",
+    "    return model_scores"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c1e1a9a7-4312-4574-ac52-fc73a007ef49",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "cannot access local variable 'model' where it is not associated with a value",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# fit and score our models\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m model_scores \u001b[38;5;241m=\u001b[39m fit_and_score(models\u001b[38;5;241m=\u001b[39mmodels,\n\u001b[0;32m      3\u001b[0m                             X_train\u001b[38;5;241m=\u001b[39mX_train,\n\u001b[0;32m      4\u001b[0m                             X_test\u001b[38;5;241m=\u001b[39mX_test,\n\u001b[0;32m      5\u001b[0m                             y_train\u001b[38;5;241m=\u001b[39my_train,\n\u001b[0;32m      6\u001b[0m                             y_test\u001b[38;5;241m=\u001b[39my_test)\n\u001b[0;32m      8\u001b[0m model_scores\n",
+      "Cell \u001b[1;32mIn[14], line 25\u001b[0m, in \u001b[0;36mfit_and_score\u001b[1;34m(models, X_train, X_test, y_train, y_test)\u001b[0m\n\u001b[0;32m     22\u001b[0m model_scores \u001b[38;5;241m=\u001b[39m {}\n\u001b[0;32m     24\u001b[0m \u001b[38;5;66;03m# Loop through models\u001b[39;00m\n\u001b[1;32m---> 25\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m name, model \u001b[38;5;129;01min\u001b[39;00m model\u001b[38;5;241m.\u001b[39mitems():\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;66;03m# Fit the model to the data\u001b[39;00m\n\u001b[0;32m     27\u001b[0m     model\u001b[38;5;241m.\u001b[39mfit(X_train, y_train)\n\u001b[0;32m     29\u001b[0m     \u001b[38;5;66;03m# Evaluate the model and append its score to model_scores\u001b[39;00m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: cannot access local variable 'model' where it is not associated with a value"
+     ]
+    }
+   ],
+   "source": [
+    "# fit and score our models\n",
+    "model_scores = fit_and_score(models=models,\n",
+    "                            X_train=X_train,\n",
+    "                            X_test=X_test,\n",
+    "                            y_train=y_train,\n",
+    "                            y_test=y_test)\n",
+    "\n",
+    "model_scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ae024aef-266c-42dc-8e00-6a8010bb95ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
